force-app/src/objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Calendar_Link__c</fullName>
        <label>Academic Calendar Link</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation_Body__c</fullName>
        <label>Accreditation Body</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Learning Commission</fullName>
                </value>
                <value>
                    <fullName>Middle States Commission on Higher Education</fullName>
                </value>
                <value>
                    <fullName>New England Commission of Higher Education</fullName>
                </value>
                <value>
                    <fullName>Northwest Accreditation Commission</fullName>
                </value>
                <value>
                    <fullName>Southern Association of Colleges and Schools</fullName>
                </value>
                <value>
                    <fullName>Western Association of Schools and Colleges</fullName>
                </value>
                <value>
                    <fullName>UK Department for Education</fullName>
                </value>
                <value>
                    <fullName>Swiss University Conference (SUK/CUS)</fullName>
                </value>
                <value>
                    <fullName>Nederlands-Vlaamse Accreditatie Organisatie (NVAO)</fullName>
                </value>
                <value>
                    <fullName>Chinese Ministry of Education</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Education Bureau</fullName>
                </value>
                <value>
                    <fullName>Singaporean Ministry of Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlchemerMembershipID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID generated by Alchemer, pushed to Salesforce via Alchemer-SF integration. This allows Alchemer to lookup the membership record again in the same survey</description>
        <externalId>true</externalId>
        <label>AlchemerMembershipID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Anticipated_Graduates_Current_Year__c</fullName>
        <label>Anticipated Graduates Current Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Graduates_Next_Year__c</fullName>
        <label>Anticipated Graduates Next Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Review_Status__c</fullName>
        <label>Application Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Route__c</fullName>
        <description>This field is used in multiple automations including a flow (Membership_Record_Triggered_Flow_CreateUpdate_BeforeSave), Alchemer form (School Membership Eligibility Application - Jan 2022), and the Lightning Record Page</description>
        <label>Application Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Route A</fullName>
                    <label>Fast Track</label>
                </value>
                <value>
                    <fullName>Route C</fullName>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Route B</fullName>
                    <label>Direct Prep</label>
                </value>
                <value>
                    <fullName>Route H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Eligibility Review</fullName>
                </value>
                <value>
                    <fullName>Engagement Access</fullName>
                </value>
                <value>
                    <fullName>Engagement Submitted</fullName>
                </value>
                <value>
                    <fullName>Evidence Requested</fullName>
                </value>
                <value>
                    <fullName>Application Review</fullName>
                </value>
                <value>
                    <fullName>Pending Allocation</fullName>
                </value>
                <value>
                    <fullName>Membership Engagement Event</fullName>
                </value>
                <value>
                    <fullName>Supplementary Review</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Background_checks_references_11__c</fullName>
        <inlineHelpText>Policy/procedure related to criminal background checks on all staff (both teaching and non-teaching).</inlineHelpText>
        <label>Background checks &amp; references (11)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boarding_Homestay__c</fullName>
        <description>This field has been replaced with the Account field Boarding/Homestay.</description>
        <label>OBSOLETE - Boarding / Homestay</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boarding</fullName>
                </value>
                <value>
                    <fullName>Homestay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_protection_policy_incl_B_H_9__c</fullName>
        <inlineHelpText>Child Protection policy which shows commitment and procedures relating to child protection of students including boarding and/or homestay.</inlineHelpText>
        <label>Child protection policy incl. B/H (9)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commitment_to_int_education_global_citiz__c</fullName>
        <description>Field used to capture information collected in the Alchemer Membership form for universities</description>
        <label>International Ed &amp; Global Citizenship</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_with_parents_13__c</fullName>
        <inlineHelpText>Two examples of proactive communication with parents, either positive or negative. Method of communication can be WhatsApp, email, letter, etc.</inlineHelpText>
        <label>Communication with parents (13)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_State_Province_of_MoE__c</fullName>
        <description>Identifies what country/state or province the Ministry of Education represents</description>
        <label>Country, State, Province of MoE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Students_Early_Childhood__c</fullName>
        <label>Current Students Early Childhood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Students_Middle_School__c</fullName>
        <label>Current Students Middle School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Students_PrimaryElementary__c</fullName>
        <label>Current Students Primary/Elementary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Students_SeniorHigh_School__c</fullName>
        <label>Current Students Senior/High School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degrees_Awarded__c</fullName>
        <description>List of academic degrees awarded by universities</description>
        <inlineHelpText>Indication of academic degree awarded by the university</inlineHelpText>
        <label>Degrees Awarded</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bachelors</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diplomas_and_End_Qualifications__c</fullName>
        <label>Diplomas and End Qualifications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Early_Childhood__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Childhood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_Notes_Remarks__c</fullName>
        <label>Eligibility Notes &amp; Remarks</label>
        <length>8000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Embedding_global_citizenship_12__c</fullName>
        <inlineHelpText>Two examples of documents or projects that showcase embedding global citizenship, which may include: 
- Building knowledge of world events &amp; understanding of interconnectedness
- Human rights/values
- Cultural and diversity learning
- Learning beyond the classroom
- Getting involved in local and international communities</inlineHelpText>
        <label>Embedding global citizenship (12)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ending_Month__c</fullName>
        <label>Ending Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <inlineHelpText>This value is pushed out of the Armature integration and represents the status of the Instrument.</inlineHelpText>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>School Submitted</fullName>
                </value>
                <value>
                    <fullName>Check for Completeness</fullName>
                </value>
                <value>
                    <fullName>Readiness to Proceed</fullName>
                </value>
                <value>
                    <fullName>CIS Review</fullName>
                </value>
                <value>
                    <fullName>Final Review</fullName>
                </value>
                <value>
                    <fullName>Membership Engagement Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Accreditation_Agency__c</fullName>
        <inlineHelpText>Schools with an accreditation report from a recognised or partner agency listed in the dropdown may be eligible for the Fast Track route to membership and will be exempt from the mandatory CIS Accreditation requirement of registering within two years of their membership start date.
Schools marked as Internally verified do not have accreditation from a recognised or partner agency but have been exempted from mandatory CIS Accreditation requirement by the Executive Director. See notes for details.</inlineHelpText>
        <label>External Accreditation Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Western Association (WASC)</fullName>
                </value>
                <value>
                    <fullName>New England Association (NEASC)</fullName>
                </value>
                <value>
                    <fullName>Middle States Association (MSA)</fullName>
                </value>
                <value>
                    <fullName>Council of British Int. Schools (COBIS)</fullName>
                </value>
                <value>
                    <fullName>British Schools Overseas (BSO)</fullName>
                </value>
                <value>
                    <fullName>ICAISA Member</fullName>
                </value>
                <value>
                    <fullName>Internally verified</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi Department of Education and Knowledge (ADEC)</fullName>
                </value>
                <value>
                    <fullName>Cognia</fullName>
                </value>
                <value>
                    <fullName>Education Standards Board of South Australia</fullName>
                </value>
                <value>
                    <fullName>Knowledge and Human Development Authority (KHDA)</fullName>
                </value>
                <value>
                    <fullName>Ministry of Education, Singapore</fullName>
                </value>
                <value>
                    <fullName>Ministry of Education, Culture, Sports, Science and Technology (MEXT)</fullName>
                </value>
                <value>
                    <fullName>New South Wales Education Standards Authority (NESA)</fullName>
                </value>
                <value>
                    <fullName>Office for Standards in Education, Children’s Services and skills (Ofsted)</fullName>
                </value>
                <value>
                    <fullName>The Victorian Registration and Qualifications Authority (VRQA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Accreditation_Report_Status__c</fullName>
        <inlineHelpText>An internal status for the school’s accreditation report based on our assessment of its contents. 

Where the Report Status is set to ineligible for Fast Track, the school will apply via the standard route to membership but will not be subject to register for CIS Accreditation within two years of their membership start date. 

Following each accreditation cycle, the school will need to provide a copy of the latest external accreditation report.</inlineHelpText>
        <label>External Accreditation Report Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Accepted with Remark</fullName>
                </value>
                <value>
                    <fullName>Ineligible for Fast Track</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_validation_of_Finances_4__c</fullName>
        <inlineHelpText>The school’s most recent Audit Report demonstrating that the school holds itself to account using an external process.

If an audit document is not available, flag this and proceed.</inlineHelpText>
        <label>External validation of Finances (4)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fast_Track_Eligibility_Remarks__c</fullName>
        <label>Fast Track Eligibility Remarks</label>
        <length>5500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fee_Agreement__c</fullName>
        <description>See https://cois.atlassian.net/browse/CSP-189</description>
        <inlineHelpText>The &quot;Default&quot; value ensures a Billing Contract and Invoice is automatically created when a member becomes Active. In certain scenario&apos;s, such as for certain school groups that prefer central billing or when special agreements apply, the automatic Billing Contract creation can be bypassed by selecting the value &quot;Exception&quot;.</inlineHelpText>
        <label>Fee Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Governance_Ownership_Leadership_2__c</fullName>
        <inlineHelpText>A description of how the governance, ownership and leadership works - a documented structure with differentiation between governance/oversight and the leadership/operations of the school. 

A written explanation in place of a formal document is sufficient.</inlineHelpText>
        <label>Governance, Ownership &amp; Leadership (2)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <label>Governance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company School</fullName>
                </value>
                <value>
                    <fullName>Independent, Foundation or Association School</fullName>
                </value>
                <value>
                    <fullName>Proprietary School</fullName>
                </value>
                <value>
                    <fullName>State or Government School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guiding_Statements_1__c</fullName>
        <inlineHelpText>The school’s written guiding statements (mission/vision/values).

Advantageous if high quality international education, well-being and/or a commitment to global citizenship are mentioned.</inlineHelpText>
        <label>Guiding Statements (1)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HE_Extended_Form__c</fullName>
        <formula>HYPERLINK(&quot;http://survey.cois.org/s3/Additional-University-Information?Id=&quot; &amp; Account_Name__c , &quot;this form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HE Extended Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HE_Extended_form_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alchemer ticks this box when the form HE Extended form is returned</description>
        <label>HE Extended form complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_of_School_Job_Description_8__c</fullName>
        <inlineHelpText>Job description for the educational leader of the school. This may be the Head of School, International Principal, Headmaster, Principal or Educational Director.</inlineHelpText>
        <label>Head of School Job Description (8)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Safety_Policy_10__c</fullName>
        <inlineHelpText>Evidence of procedures relating to health and safety which may include fire drills, lockdowns, earthquakes, security, first aid/medical care, etc.</inlineHelpText>
        <label>Health &amp; Safety Policy (10)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_degrees_are_awarded_at_institution__c</fullName>
        <label>How degrees are awarded at institution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_l_student_services_enrolment__c</fullName>
        <label>Int&apos;l student services &amp; enrolment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lanuage_of_institution_1__c</fullName>
        <label>Lanuage of institution 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lanuage_of_institution_2__c</fullName>
        <label>Lanuage of institution 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lanuage_of_institution_3__c</fullName>
        <label>Lanuage of institution 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStatusUpdate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Helper field, contains datetimestamp of the most recent Membership Status update.</description>
        <label>Last Status Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Learning_teaching_statement_policy_5__c</fullName>
        <inlineHelpText>A written statement of the school’s teaching methodology showing purpose and direction in improving student learning.

A written explanation in place of a formal document is sufficient.</inlineHelpText>
        <label>Learning &amp; teaching statement/policy (5)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Authority_in_Host_Country__c</fullName>
        <label>OBSOLETE - License Authority in Country</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <inlineHelpText>School license and its translation in English.
 
It should be clear where it states the name of the school, address, number of students permitted, grade levels/curriculum and dates of validity.</inlineHelpText>
        <label>License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, in English</fullName>
                </value>
                <value>
                    <fullName>Need translation/ Annotation</fullName>
                </value>
                <value>
                    <fullName>Unclear/ Not submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_other_Accreditation_Organisation__c</fullName>
        <description>A free text field for the school to list accreditations they have from agencies not on our list.</description>
        <inlineHelpText>Information about external accreditations held by the school.</inlineHelpText>
        <label>List other Accreditation Organisation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_other_campuses_and_locations__c</fullName>
        <label>List other campuses and locations</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Majors__c</fullName>
        <label>Majors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>African Studies</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>American Studies</fullName>
                </value>
                <value>
                    <fullName>Animal Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art - History</fullName>
                </value>
                <value>
                    <fullName>Art - Studio</fullName>
                </value>
                <value>
                    <fullName>Asian Studies</fullName>
                </value>
                <value>
                    <fullName>Astronomy</fullName>
                </value>
                <value>
                    <fullName>Athletic Training</fullName>
                </value>
                <value>
                    <fullName>Aviation and Aeronautics</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineering</fullName>
                </value>
                <value>
                    <fullName>Business/Management</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Classics</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Computer Graphics</fullName>
                </value>
                <value>
                    <fullName>Computer Science/Systems</fullName>
                </value>
                <value>
                    <fullName>Criminal Justice</fullName>
                </value>
                <value>
                    <fullName>Criminology</fullName>
                </value>
                <value>
                    <fullName>Culinary Arts</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Application_Date__c</fullName>
        <label>Membership Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Armature_Sync_Field__c</fullName>
        <description>This field is used to populate a date/time stamp from a flow. The Armature sync will look for a value in this field to be within a date range for the sync to occur.</description>
        <label>Membership Armature Sync Field</label>
        <type>DateTime</type>
    </fields>
</CustomObject>